--- a/cursos/espanol/programacion/programacion.html
+++ b/cursos/espanol/programacion/programacion.html
@@ -43,20 +43,21 @@
             <div id="content" class="p-4 p-md-5 pt-5">
                 <h1 class="mb-4">Programacion Coding Tour</h1>
                 <p>Curso rapido de programacion en python. Desde cero.</p>
-                <ol>
-                    <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/0_intro.ipynb">Una calculadora potente</a></li>
-                    <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/1_variables.ipynb">Guardando resultados en la memoria</a></li>
-                    <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/2_condiciones.ipynb">Comparar dos valores</a></li>
-                    <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/3_if.ipynb">Si pasa algo entonces has esto</a></li>
-                    <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/4_while.ipynb">Mientras esto no cambie repite</a></li>
+                <h2>Contenido:</h2>
+                <ul>
+                    <li>Unidad 1: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/0_intro.ipynb">Una calculadora potente</a></li>
+                    <li>Unidad 2: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/1_variables.ipynb">Guardando resultados en la memoria</a></li>
+                    <li>Unidad 3: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/2_condiciones.ipynb">Comparar dos valores</a></li>
+                    <li>Unidad 4: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/3_if.ipynb">Si pasa algo entonces has esto</a></li>
+                    <li>Unidad 5: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/4_while.ipynb">Mientras esto no cambie repite</a></li>
                     <li>
-                        <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/5_funciones.ipynb">Entrada -> Proceso -> Salida</a>
+                        Unidad 6: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/5_funciones.ipynb">Entrada -> Proceso -> Salida</a>
                         <ul><li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/5.1_funciones_ejercicios.ipynb">Ejercicios extra de funciones</a></li></ul>
                     </li>
-                    <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/6_funciones_ya_definidas.ipynb">Funciones ya definidas</a></li>
-                    <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/7_listas.ipynb">Muchas variables con un solo nombre</a></li>
-                    <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/8_for.ipynb">Para cada elemento de una lista</a></li>
-                </ol>
+                    <li>Unidad 7: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/6_funciones_ya_definidas.ipynb">Funciones ya definidas</a></li>
+                    <li>Unidad 8: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/7_listas.ipynb">Muchas variables con un solo nombre</a></li>
+                    <li>Unidad 9: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/8_for.ipynb">Para cada elemento de una lista</a></li>
+                </ul>
 
                 
             </div>
