--- a/cursos/espanol/programacion/programacion.html
+++ b/cursos/espanol/programacion/programacion.html
@@ -12,6 +12,15 @@
         <link rel="stylesheet" href="../../../assets/css/style.css">
         <meta name="robots" content="noindex, follow">
     </head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y9SKYR2G8K"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-Y9SKYR2G8K');
+    </script>
     <body>
         <div class="wrapper d-flex align-items-stretch">
             <nav id="sidebar">
@@ -45,18 +54,21 @@
                 <p>Curso rapido de programacion en python. Desde cero.</p>
                 <h2>Contenido:</h2>
                 <ul>
-                    <li>Unidad 1: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/0_intro.ipynb">Una calculadora potente</a></li>
-                    <li>Unidad 2: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/1_variables.ipynb">Guardando resultados en la memoria</a></li>
-                    <li>Unidad 3: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/2_condiciones.ipynb">Comparar dos valores</a></li>
-                    <li>Unidad 4: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/3_if.ipynb">Si pasa algo entonces has esto</a></li>
-                    <li>Unidad 5: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/4_while.ipynb">Mientras esto no cambie repite</a></li>
+                    <li>Unidad 0: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/0_intro.ipynb">Una calculadora potente</a></li>
+                    <li>Unidad 1: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/1_variables.ipynb">Guardando resultados en la memoria</a></li>
+                    <li>Unidad 2: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/2_condiciones.ipynb">Comparar dos valores</a></li>
+                    <li>Unidad 3: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/3_if.ipynb">Si pasa algo entonces has esto</a></li>
+                    <li>Unidad 4: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/4_while.ipynb">Mientras esto no cambie repite</a></li>
                     <li>
-                        Unidad 6: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/5_funciones.ipynb">Entrada -> Proceso -> Salida</a>
+                        Unidad 5:<a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/5_funciones.ipynb">Entrada -> Proceso -> Salida</a>
                         <ul><li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/5.1_funciones_ejercicios.ipynb">Ejercicios extra de funciones</a></li></ul>
                     </li>
-                    <li>Unidad 7: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/6_funciones_ya_definidas.ipynb">Funciones ya definidas</a></li>
-                    <li>Unidad 8: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/7_listas.ipynb">Muchas variables con un solo nombre</a></li>
-                    <li>Unidad 9: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/8_for.ipynb">Para cada elemento de una lista</a></li>
+                    <li>Unidad 6: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/6_funciones_ya_definidas.ipynb">Funciones ya definidas</a></li>
+                    <li>Unidad 7: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/7_listas.ipynb">Muchas variables con un solo nombre</a></li>
+                    <li>
+                        Unidad 8: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/8_for.ipynb">Para cada elemento de una lista</a>
+                        <ul><li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/8.1_for_y_while.ipynb">Todo lo que hago con for lo puedo hacer con while</a></li></ul>
+                    </li>
                 </ul>
 
                 
