--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
         <link rel="stylesheet" href="assets/css/style.css">
         <meta name="robots" content="noindex, follow">
     </head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y9SKYR2G8K"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-Y9SKYR2G8K');
+    </script>
     <body>
         <div class="wrapper d-flex align-items-stretch">
             <nav id="sidebar">
