Remove google analytics add insights

--- a/cursos/espanol/programacion/programacion.html
+++ b/cursos/espanol/programacion/programacion.html
@@ -12,15 +12,6 @@
         <link rel="stylesheet" href="../../../assets/css/style.css">
         <meta name="robots" content="noindex, follow">
     </head>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y9SKYR2G8K"></script>
-    <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'G-Y9SKYR2G8K');
-    </script>
     <body>
         <div class="wrapper d-flex align-items-stretch">
             <nav id="sidebar">
@@ -60,7 +51,7 @@
                     <li>Unidad 3: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/3_if.ipynb">Si pasa algo entonces has esto</a></li>
                     <li>Unidad 4: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/4_while.ipynb">Mientras esto no cambie repite</a></li>
                     <li>
-                        Unidad 5:<a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/5_funciones.ipynb">Entrada -> Proceso -> Salida</a>
+                        Unidad 5: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/5_funciones.ipynb">Entrada -> Proceso -> Salida</a>
                         <ul><li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/5.1_funciones_ejercicios.ipynb">Ejercicios extra de funciones</a></li></ul>
                     </li>
                     <li>Unidad 6: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/6_funciones_ya_definidas.ipynb">Funciones ya definidas</a></li>
@@ -78,5 +69,7 @@
         <script src="../../../assets/js/popper.js"></script>
         <script src="../../../assets/js/bootstrap.min.js"></script>
         <script src="../../../assets/js/main.js"></script>
+        <script src="https://getinsights.io/js/insights.js"></script>
+        <script>insights.init('Tchyd3Xp64Qo3Z2c');insights.trackPages();</script>
     </body>
 </html>
