--- a/meetdates.html
+++ b/meetdates.html
@@ -12,15 +12,6 @@
         <link rel="stylesheet" href="assets/css/style.css">
         <meta name="robots" content="noindex, follow">
     </head>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y9SKYR2G8K"></script>
-    <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'G-Y9SKYR2G8K');
-    </script>
     <body>
         <div class="wrapper d-flex align-items-stretch">
             <nav id="sidebar">
@@ -72,5 +63,6 @@
         <script src="assets/js/popper.js"></script>
         <script src="assets/js/bootstrap.min.js"></script>
         <script src="assets/js/main.js"></script>
+        <script>insights.init('Tchyd3Xp64Qo3Z2c');insights.trackPages();</script>
     </body>
 </html>
