--- a/contact.html
+++ b/contact.html
@@ -60,6 +60,7 @@
         <script src="assets/js/popper.js"></script>
         <script src="assets/js/bootstrap.min.js"></script>
         <script src="assets/js/main.js"></script>
+        <script src="https://getinsights.io/js/insights.js"></script>
         <script>insights.init('Tchyd3Xp64Qo3Z2c');insights.trackPages();</script>
     </body>
 </html>
