--- a/cursos/espanol/programacion/programacion.html
+++ b/cursos/espanol/programacion/programacion.html
@@ -60,6 +60,12 @@
                         Unidad 8: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/8_for.ipynb">Para cada elemento de una lista</a>
                         <ul><li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/8.1_for_y_while.ipynb">Todo lo que hago con for lo puedo hacer con while</a></li></ul>
                     </li>
+                    <li>
+                        Unidad 9: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/9_corchetes_listas_strings.ipynb">Partir listas y strings</a>
+                        <ul><li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/9.1_funciones_listas_strings.ipynb">Funciones incorporades de listas y strings</a></li></ul>
+                    </li>
+                    <li>Unidad 10: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/A0_practica.ipynb">La practica te hara maestr@</a></li>
+
                 </ul>
 
                 
