--- a/cursos/espanol/programacion/programacion.html
+++ b/cursos/espanol/programacion/programacion.html
@@ -64,7 +64,7 @@
                         Unidad 9: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/9_corchetes_listas_strings.ipynb">Partir listas y strings</a>
                         <ul><li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/9.1_funciones_listas_strings.ipynb">Funciones incorporades de listas y strings</a></li></ul>
                     </li>
-                    <li>Unidad 10: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/A0_practica.ipynb">La practica te hara maestr@</a></li>
+                    <li>Unidad 10: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/A0_practica.ipynb">La practica te convertira en maestr@</a></li>
 
                 </ul>
 
