--- a/meetdates.html
+++ b/meetdates.html
@@ -22,7 +22,7 @@
                     </button>
                 </div>
                 <div class="p-4 pt-5">
-                    <h1 ><a href="#">Free<br/>Coding<br/>Tour</a><br/><br/></h1>
+                    <h1 ><a href="./index.html">Free<br/>Coding<br/>Tour</a><br/><br/></h1>
                     <ul class="list-unstyled components mb-5">
                         <li>
                             <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Coding Tours</a>
