Remove Meet Dates

--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
                             </ul>
                         </li>
                         <li class="active"><a href="contact.html">Dudas y Sugerencias</a></li>
-                        <li><a href="meetdates.html">Fechas de meet</a></li>
+                        <!--li><a href="meetdates.html">Fechas de meet</a></li-->
                         <!--li><a href="#">Cursos Presenciales</a></li-->
                     </ul>
                     <div class="footer"></div>
