--- a/cursos/espanol/programacion/programacion.html
+++ b/cursos/espanol/programacion/programacion.html
@@ -34,7 +34,7 @@
                             </ul>
                         </li>
                         <li><a href="../../../contact.html">Dudas y Sugerencias</a></li>
-                        <li><a href="../../../meetdates.html">Fechas de meet</a></li>
+                        <!--li><a href="../../../meetdates.html">Fechas de meet</a></li-->
                     </ul>
                     <div class="footer"></div>
                 </div>
