--- a/cursos/espanol/programacion/programacion.html
+++ b/cursos/espanol/programacion/programacion.html
@@ -62,7 +62,7 @@
                     </li>
                     <li>
                         Unidad 9: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/9_corchetes_listas_strings.ipynb">Partir listas y strings</a>
-                        <ul><li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/9.1_funciones_listas_strings.ipynb">Funciones incorporades de listas y strings</a></li></ul>
+                        <ul><li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/9.1_funciones_listas_strings.ipynb">Funciones incorporadas de listas y strings</a></li></ul>
                     </li>
                     <li>Unidad 10: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/A0_practica.ipynb">La practica te convertira en maestr@</a></li>
                     <li>Unidad 11: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/A1_listas_de_listas.ipynb">Listas de listas</a></li>
