--- a/cursos/espanol/programacion/programacion.html
+++ b/cursos/espanol/programacion/programacion.html
@@ -36,6 +36,8 @@
                         <li><a href="../../../contact.html">Dudas y Sugerencias</a></li>
                         <!--li><a href="../../../meetdates.html">Fechas de meet</a></li-->
                     </ul>
+                    <!--a class="github-button" href="https://github.com/amiune/freecodingtour" data-size="large" data-show-count="true" aria-label="Star amiune/freecodingtour on GitHub">Star</a-->
+                    <!--a class="github-button" href="https://github.com/sponsors/amiune" data-icon="octicon-heart" data-size="large" aria-label="Sponsor @amiune on GitHub">Sponsor</a-->
                     <div class="footer"></div>
                 </div>
             </nav>
@@ -79,6 +81,7 @@
         <script src="../../../assets/js/popper.js"></script>
         <script src="../../../assets/js/bootstrap.min.js"></script>
         <script src="../../../assets/js/main.js"></script>
+        <script async defer src="https://buttons.github.io/buttons.js"></script>
         <script src="https://getinsights.io/js/insights.js"></script>
         <script>insights.init('Tchyd3Xp64Qo3Z2c');insights.trackPages();</script>
     </body>
