--- a/cursos/espanol/programacion/programacion.html
+++ b/cursos/espanol/programacion/programacion.html
@@ -72,6 +72,10 @@
                     <li>Unidad 13: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/A3_diccionarios.ipynb">Diccionarios</a></li>
                     <li>Unidad 14: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/A4_sets.ipynb">Conjuntos</a></li>
                     <li>Unidad 15: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/A5_clases.ipynb">Crear nuestro propio tipo de variable (Clases)</a></li>
+                    <li>Unidad 16: 
+                        <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/A6_numeros_aleatorios.ipynb">Numeros Aleatorios</a>
+                        <ul><li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/A6.1_probabilidades_contraintuitivas.ipynb">Simulacion y Probabilidades Contraintuitivas</a></li></ul>
+                    </li>
                 </ul>
 
                 
