--- a/cursos/espanol/datascience/datascience.html
+++ b/cursos/espanol/datascience/datascience.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Programacion Coding Tour</title>
+        <title>DataScience Coding Tour</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap" rel="stylesheet">
@@ -27,8 +27,8 @@
                         <li class="active">
                             <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="true" class="dropdown-toggle">Coding Tours</a>
                             <ul class="collapse list-unstyled" id="homeSubmenu">
-                                <li><a href="#">Programacion</a></li>
-                                <li><a href="../datascience/datascience.html">Ciencia de Datos</a></li>
+                                <li><a href="../programacion/programacion.html">Programacion</a></li>
+                                <li><a href="#">Ciencia de Datos</a></li>
                                 <!--li><a href="#">Analisis y prediccion de datos</a></li>
                                 <li><a href="#">Blockchain</a></li>
                                 <li><a href="#">Programacion Cuantica</a></li-->
