--- a/aboutus.html
+++ b/aboutus.html
@@ -33,9 +33,8 @@
                                 <li><a href="#">Programacion Cuantica</a></li-->
                             </ul>
                         </li>
-                        <li class="active"><a href="contact.html">Dudas y Sugerencias</a></li>
+                        <li><a href="contact.html">Dudas y Sugerencias</a></li>
                         <li><a href="aboutus.html">Sobre FCT</a></li>
-                        <!--li><a href="meetdates.html">Fechas de meet</a></li-->
                         <!--li><a href="#">Cursos Presenciales</a></li-->
                     </ul>
                     <!--a class="github-button" href="https://github.com/amiune/freecodingtour" data-size="large" data-show-count="true" aria-label="Star amiune/freecodingtour on GitHub">Star</a-->
@@ -46,16 +45,34 @@
             </nav>
 
             <div id="content" class="p-4 p-md-5 pt-5">
-                <h1 class="mb-4">Contactanos</h1>
-                <p>Puedes contactar conmigo a traves de mi email o linkedin. 
-                    Ademas tambien por discord donde puedes compartir dudas con otros estudiantes:</p>
-
+                <h1 class="mb-4">Por que FreeCodingTour.com?</h1>
                 <p>
-                    <ul>
-                        <li>Email: amiune<script>document.write("@")</script><span style="display:none">@hotmail.com</span><!-- @twitter.com -->gmail.com</li>
-                        <li>Linkedin: <a target="_blank" href="https://www.linkedin.com/in/amiune/">https://www.linkedin.com/in/amiune/</a></li>
-                        <li>Discord: <a target="_blank" href="https://discord.gg/U2rwd4Z5">https://discord.gg/U2rwd4Z5</a></li>
-                    </ul>
+                    Como profesor de programacion e inteligencia artificial para alumnos sin conocimiento previo y
+                    tambien universitarios siempre me enfrento con dos problemas: 
+                    <ol>
+                        <li>diferentes ritmos de aprendizaje de cada alumno</li>
+                        <li>contenido nuevo constante</li>
+                    </ol>
+                    Este sitio intenta resolver esos problemas de la siguiente forma:
+                    <ol>
+                        <li>guia practica de problemas con soluciones para avanzar de forma autonoma</li>
+                        <li>contenido actualizado, gratuito y en espanol para todos los alumnos, actuales y anteriores</li>
+                    </ol>
+                </p>
+                <p>
+                    A partir de esto surge un nuevo objetivo que es acercar este material didáctico y gratuito a los 
+                    hispanohablantes ya que la mayoría de los cursos de programación gratuitos están en inglés
+                    y que el avance de la computación y la inteligencia artificial hace que los sectores 
+                    más vulnerables de habla hispana vayan quedando retrasados si no pueden aprender 
+                    a utilizar estas nuevas herramientas. FreeCodingTour.com es un granito de arena para
+                    ayudar a personas de diferentes formaciones y ambitos que quieren aprendera utilizarlas.
+                </p>
+                <p>
+                    Estos cursos no son un reemplazo de otros cursos y mucho menos del acompañamiento 
+                    presencial de profesores.
+                </p>
+                <p>
+                    
                 </p>
                 
             </div>
