--- a/index.html
+++ b/index.html
@@ -34,9 +34,13 @@
                             </ul>
                         </li>
                         <li><a href="contact.html">Dudas y Sugerencias</a></li>
+                        <li><a href="aboutus.html">Sobre FCT</a></li>
                         <!--li><a href="meetdates.html">Fechas de meet</a></li-->
                         <!--li><a href="#">Cursos Presenciales</a></li-->
                     </ul>
+                    <!--a class="github-button" href="https://github.com/amiune/freecodingtour" data-size="large" data-show-count="true" aria-label="Star amiune/freecodingtour on GitHub">Star</a-->
+                    <!--a class="github-button" href="https://github.com/sponsors/amiune" data-icon="octicon-heart" data-size="large" aria-label="Sponsor @amiune on GitHub">Sponsor</a-->
+                    <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a>
                     <div class="footer"></div>
                 </div>
             </nav>
