--- a/cursos/espanol/datascience/datascience.html
+++ b/cursos/espanol/datascience/datascience.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>DataScience Coding Tour</title>
+        <title>Ciencia de Datos Coding Tour</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap" rel="stylesheet">
@@ -46,39 +46,11 @@
             </nav>
 
             <div id="content" class="p-4 p-md-5 pt-5">
-                <h1 class="mb-4">Programacion Coding Tour</h1>
-                <p>Curso rapido de programacion en python. Desde cero.</p>
+                <h1 class="mb-4">Ciencia de Datos Coding Tour</h1>
+                <p>Curso de ciencia de datos.</p>
                 <h2>Contenido:</h2>
                 <ul>
-                    <li>Unidad 0: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/0_intro.ipynb">Una calculadora potente</a></li>
-                    <li>Unidad 1: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/1_variables.ipynb">Guardando resultados en la memoria</a></li>
-                    <li>Unidad 2: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/2_condiciones.ipynb">Comparar dos valores</a></li>
-                    <li>Unidad 3: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/3_if.ipynb">Si pasa algo entonces haz esto</a></li>
-                    <li>Unidad 4: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/4_while.ipynb">Mientras esto no cambie repite</a></li>
-                    <li>
-                        Unidad 5: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/5_funciones.ipynb">Entrada -> Proceso -> Salida</a>
-                        <ul><li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/5.1_funciones_ejercicios.ipynb">Ejercicios extra de funciones</a></li></ul>
-                    </li>
-                    <li>Unidad 6: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/6_funciones_ya_definidas.ipynb">Funciones ya definidas</a></li>
-                    <li>Unidad 7: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/7_listas.ipynb">Muchas variables con un solo nombre</a></li>
-                    <li>
-                        Unidad 8: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/8_for.ipynb">Para cada elemento de una lista</a>
-                        <ul><li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/8.1_for_y_while.ipynb">Todo lo que hago con for lo puedo hacer con while</a></li></ul>
-                    </li>
-                    <li>
-                        Unidad 9: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/9_corchetes_listas_strings.ipynb">Partir listas y strings</a>
-                        <ul><li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/9.1_funciones_listas_strings.ipynb">Funciones incorporadas de listas y strings</a></li></ul>
-                    </li>
-                    <li>Unidad 10: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/A0_practica.ipynb">La practica te convertira en maestr@</a></li>
-                    <li>Unidad 11: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/A1_listas_de_listas.ipynb">Listas de listas</a></li>
-                    <li>Unidad 12: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/A2_tuplas.ipynb">Tuplas</a></li>
-                    <li>Unidad 13: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/A3_diccionarios.ipynb">Diccionarios</a></li>
-                    <li>Unidad 14: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/A4_sets.ipynb">Conjuntos</a></li>
-                    <li>Unidad 15: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/A5_clases.ipynb">Crear nuestro propio tipo de variable (Clases)</a></li>
-                    <li>Unidad 16: 
-                        <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/A6_numeros_aleatorios.ipynb">Numeros Aleatorios</a>
-                        <ul><li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/A6.1_probabilidades_contraintuitivas.ipynb">Simulacion y Probabilidades Contraintuitivas</a></li></ul>
-                    </li>
+                    <li>Unidad 0: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/0_intro.ipynb">Como vender mi telefono mobil</a></li>
                 </ul>
 
                 
