Added datascience course description

--- a/cursos/espanol/datascience/datascience.html
+++ b/cursos/espanol/datascience/datascience.html
@@ -47,7 +47,8 @@
 
             <div id="content" class="p-4 p-md-5 pt-5">
                 <h1 class="mb-4">Ciencia de Datos Coding Tour</h1>
-                <p>Curso de ciencia de datos.</p>
+                <p>Este es un curso para que personas de diferentes ambitos y formaciones puedan utilizar
+                    las herramientas de la ciencia de datos es sus respectivas actividades.</p>
                 <h2>Contenido:</h2>
                 <ul>
                     <li>Unidad 0: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/0_intro.ipynb">Como vender mi telefono mobil</a></li>
