--- a/index.html
+++ b/index.html
@@ -65,7 +65,14 @@
                     <li>
                         <h3><a href="./cursos/espanol/programacion/programacion.html">Programacion (ir al curso)</a></h3>
                         <p>
-                        Curso rapido de programacion. Desde cero.
+                        Curso rapido de programacion en python. Desde cero.
+                        </p>
+                    </li>
+                    <li>
+                        <h3><a href="./cursos/espanol/datascience/datascience.html">Ciencia de Datos (ir al curso)</a></h3>
+                        <p>
+                            Curso para que personas de diferentes ambitos y formaciones puedan utilizar
+                            las herramientas de la ciencia de datos es sus respectivas actividades.
                         </p>
                     </li>
                 </ul>
