--- a/cursos/espanol/datascience/datascience.html
+++ b/cursos/espanol/datascience/datascience.html
@@ -6,8 +6,6 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap" rel="stylesheet">
-        <!--link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500&display=swap" rel="stylesheet"-->
-        <!--link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro:400,600&display=swap" rel="stylesheet"-->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="../../../assets/css/style.css">
         <meta name="robots" content="noindex, follow">
@@ -38,16 +36,17 @@
                         <li><a href="../../../aboutus.html">Sobre FCT</a></li>
                         <!--li><a href="../../../meetdates.html">Fechas de meet</a></li-->
                     </ul>
+                    <br/><br/><br/><br/>
                     <!--a class="github-button" href="https://github.com/amiune/freecodingtour" data-size="large" data-show-count="true" aria-label="Star amiune/freecodingtour on GitHub">Star</a-->
-                    <!--a class="github-button" href="https://github.com/sponsors/amiune" data-icon="octicon-heart" data-size="large" aria-label="Sponsor @amiune on GitHub">Sponsor</a-->
-                    <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a>
+                    <a class="github-button" href="https://github.com/sponsors/amiune" data-icon="octicon-heart" data-size="large" aria-label="Sponsor @amiune on GitHub">Sponsor</a><br/>
+                    <a target="_blank" rel="license" href="http://creativecommons.org/licenses/by/4.0/deed.es"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a>
                     <div class="footer"></div>
                 </div>
             </nav>
 
             <div id="content" class="p-4 p-md-5 pt-5">
                 <h1 class="mb-4">Ciencia de Datos Coding Tour</h1>
-                <p>Este es un curso para que personas de diferentes ambitos y formaciones puedan utilizar
+                <p>Curso para que personas de diferentes ambitos y formaciones puedan utilizar
                     las herramientas de la ciencia de datos es sus respectivas actividades.</p>
                 <h2>Contenido:</h2>
                 <ul>
@@ -61,8 +60,8 @@
         <script src="../../../assets/js/popper.js"></script>
         <script src="../../../assets/js/bootstrap.min.js"></script>
         <script src="../../../assets/js/main.js"></script>
-        <script async defer src="https://buttons.github.io/buttons.js"></script>
         <script src="https://getinsights.io/js/insights.js"></script>
         <script>insights.init('Tchyd3Xp64Qo3Z2c');insights.trackPages();</script>
+        <script async defer src="https://buttons.github.io/buttons.js"></script>
     </body>
 </html>
