--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap" rel="stylesheet">
-        <!--link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500&display=swap" rel="stylesheet"-->
-        <!--link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro:400,600&display=swap" rel="stylesheet"-->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="assets/css/style.css">
         <meta name="robots" content="noindex, follow">
@@ -39,9 +37,10 @@
                         <!--li><a href="meetdates.html">Fechas de meet</a></li-->
                         <!--li><a href="#">Cursos Presenciales</a></li-->
                     </ul>
+                    <br/><br/><br/><br/>
                     <!--a class="github-button" href="https://github.com/amiune/freecodingtour" data-size="large" data-show-count="true" aria-label="Star amiune/freecodingtour on GitHub">Star</a-->
-                    <!--a class="github-button" href="https://github.com/sponsors/amiune" data-icon="octicon-heart" data-size="large" aria-label="Sponsor @amiune on GitHub">Sponsor</a-->
-                    <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a>
+                    <a class="github-button" href="https://github.com/sponsors/amiune" data-icon="octicon-heart" data-size="large" aria-label="Sponsor @amiune on GitHub">Sponsor</a><br/>
+                    <a target="_blank" rel="license" href="http://creativecommons.org/licenses/by/4.0/deed.es"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a>
                     <div class="footer"></div>
                 </div>
             </nav>
@@ -99,5 +98,6 @@
         <script src="assets/js/main.js"></script>
         <script src="https://getinsights.io/js/insights.js"></script>
         <script>insights.init('Tchyd3Xp64Qo3Z2c');insights.trackPages();</script>
+        <script async defer src="https://buttons.github.io/buttons.js"></script>
     </body>
 </html>
