--- a/cursos/espanol/datascience/datascience.html
+++ b/cursos/espanol/datascience/datascience.html
@@ -36,7 +36,7 @@
                         <li><a href="../../../aboutus.html">Sobre FCT</a></li>
                         <!--li><a href="../../../meetdates.html">Fechas de meet</a></li-->
                     </ul>
-                    <br/><br/><br/><br/>
+                    <br/><br/><br/>
                     <!--a class="github-button" href="https://github.com/amiune/freecodingtour" data-size="large" data-show-count="true" aria-label="Star amiune/freecodingtour on GitHub">Star</a-->
                     <a class="github-button" href="https://github.com/sponsors/amiune" data-icon="octicon-heart" data-size="large" aria-label="Sponsor @amiune on GitHub">Sponsor</a><br/>
                     <a target="_blank" rel="license" href="http://creativecommons.org/licenses/by/4.0/deed.es"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a>
@@ -47,10 +47,11 @@
             <div id="content" class="p-4 p-md-5 pt-5">
                 <h1 class="mb-4">Ciencia de Datos Coding Tour</h1>
                 <p>Curso para que personas de diferentes ambitos y formaciones puedan utilizar
-                    las herramientas de la ciencia de datos es sus respectivas actividades.</p>
+                    las herramientas de la ciencia de datos en sus respectivas actividades.</p>
                 <h2>Contenido:</h2>
                 <ul>
-                    <li>Unidad 0: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/0_intro.ipynb">Como vender mi telefono mobil</a></li>
+                    <li>Unidad 0: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/0_intro.ipynb">Como vender mi telefono movil</a></li>
+                    <li>Unidad 1: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/1_pandas.ipynb">Convertir mis datos en una tabla</a></li>
                 </ul>
 
                 
