--- a/cursos/espanol/datascience/datascience.html
+++ b/cursos/espanol/datascience/datascience.html
@@ -52,6 +52,11 @@
                 <ul>
                     <li>Unidad 0: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/0_intro.ipynb">Como vender mi telefono movil</a></li>
                     <li>Unidad 1: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/1_pandas.ipynb">Convertir mis datos en una tabla</a></li>
+                    <li>Unidad 2: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/2_vectores.ipynb">Convertir todos los datos a numeros</a></li>
+                    <li>Unidad 3: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/3_train_test.ipynb">Separar la tabla en dos: Entrenamiento y Prueba</a></li>
+                    <li>Unidad 4: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/4_caja_negra.ipynb">Entrenando nuestra caja negra</a></li>
+                    <!--li>Unidad 5: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/5_metricas.ipynb">Como saber si mi caja negra esta bien entrenada?</a></li>
+                    <li>Unidad 6: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/6_ajuste_de_parametros.ipynb">Seleccionando los mejores parametros para mi caja negra</a></li-->
                 </ul>
 
                 
