--- a/cursos/espanol/datascience/datascience.html
+++ b/cursos/espanol/datascience/datascience.html
@@ -56,7 +56,7 @@
                     <li>Unidad 3: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/3_train_test.ipynb">Separar la tabla en dos: Entrenamiento y Prueba</a></li>
                     <li>Unidad 4: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/4_caja_negra.ipynb">Entrenando nuestra caja negra</a></li>
                     <ul>
-                        <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/4.1_tipos_de_caja_negra.ipynb">Entrenando nuestra caja negra</a></li>
+                        <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/4.1_tipos_de_caja_negra.ipynb">Tipos de caja negra</a></li>
                     </ul>
                     <!--li>Unidad 5: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/5_metricas.ipynb">Como saber si mi caja negra esta bien entrenada?</a></li>
                     <li>Unidad 6: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/6_ajuste_de_parametros.ipynb">Seleccionando los mejores parametros para mi caja negra</a></li-->
