--- a/aboutus.html
+++ b/aboutus.html
@@ -65,7 +65,7 @@
                     y que el avance de la computación y la inteligencia artificial hace que los sectores 
                     más vulnerables de habla hispana vayan quedando retrasados si no pueden aprender 
                     a utilizar estas nuevas herramientas. FreeCodingTour.com es un granito de arena para
-                    ayudar a personas de diferentes formaciones y ambitos que quieren aprendera utilizarlas.
+                    ayudar a personas de diferentes formaciones y ambitos que quieren aprender a utilizarlas.
                 </p>
                 <p>
                     Estos cursos no son un reemplazo de otros cursos y mucho menos del acompañamiento 
