--- a/cursos/espanol/datascience/datascience.html
+++ b/cursos/espanol/datascience/datascience.html
@@ -55,11 +55,25 @@
                     <li>Unidad 2: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/2_vectores.ipynb">Convertir todos los datos a numeros</a></li>
                     <li>Unidad 3: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/3_train_test.ipynb">Separar la tabla en dos: Entrenamiento y Prueba</a></li>
                     <li>Unidad 4: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/4_caja_negra.ipynb">Entrenando nuestra caja negra</a></li>
-                    <ul>
-                        <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/4.1_tipos_de_caja_negra.ipynb">Tipos de caja negra</a></li>
-                    </ul>
-                    <!--li>Unidad 5: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/5_metricas.ipynb">Como saber si mi caja negra esta bien entrenada?</a></li>
-                    <li>Unidad 6: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/6_ajuste_de_parametros.ipynb">Seleccionando los mejores parametros para mi caja negra</a></li-->
+                    <li>Unidad 5: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/5_tipos_de_caja_negra.ipynb">Tipos de caja negra</a></li>
+                    <li>Unidad 7: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/6_metricas.ipynb">Como saber si mi caja negra esta bien entrenada?</a></li>
+                    <li>Unidad 6: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/7_ajuste_de_parametros.ipynb">Seleccionando los mejores parametros para mi caja negra</a></li>
+                    <li>Analisis y limpieza de datos (preprocesamiento):
+                        <ul>
+                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A1_graficos.ipynb">Graficos para analisis</a></li>
+                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A2_jugando_con_pandas.ipynb">Jugando con Pandas (material opcional)</a></li>
+                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A3_jugando_con_numpy.ipynb">Jugando con Numpy (material opcional)</a></li>
+                        </ul>
+                    </li>
+                    <li>Espiando adentro de las cajas negras (material opcional avanzado):
+                        <ul>
+                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/4.2_knn.ipynb">Vecinos Cercanos (KNN)</a></li>
+                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/4.2_knn.ipynb">Arboles de Decision (Decision Trees)</a></li>
+                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/4.2_knn.ipynb">Regresion Lineal y Logistica (Lineal and Logistic Regression)</a></li>
+                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/4.2_knn.ipynb">Naive Bayes</a></li>
+                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/4.2_knn.ipynb">Ensambles (Ensembles)</a></li>
+                        </ul>
+                    </li>
                 </ul>
 
                 
