--- a/cursos/espanol/datascience/datascience.html
+++ b/cursos/espanol/datascience/datascience.html
@@ -27,8 +27,8 @@
                             <ul class="collapse list-unstyled" id="homeSubmenu">
                                 <li><a href="../programacion/programacion.html">Programacion</a></li>
                                 <li><a href="#">Ciencia de Datos</a></li>
-                                <!--li><a href="#">Analisis y prediccion de datos</a></li>
-                                <li><a href="#">Blockchain</a></li>
+                                <li><a href="../deeplearning/deeplearning.html">Deep Learning</a></li>
+                                <!--li><a href="#">Blockchain</a></li>
                                 <li><a href="#">Programacion Cuantica</a></li-->
                             </ul>
                         </li>
@@ -55,7 +55,12 @@
                     <li>Unidad 2: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/2_vectores.ipynb">Convertir todos los datos a numeros</a></li>
                     <li>Unidad 3: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/3_train_test.ipynb">Separar la tabla en dos: Entrenamiento y Prueba</a></li>
                     <li>Unidad 4: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/4_caja_negra.ipynb">Entrenando nuestra caja negra</a></li>
-                    <li>Unidad 5: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/5_tipos_de_caja_negra.ipynb">Tipos de caja negra</a></li>
+                    <li>
+                        Unidad 5: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/5_tipos_de_caja_negra.ipynb">Tipos de caja negra</a>
+                        <ul>
+                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/5.1_ejercicio_diabetes_parte1.ipynb">Ejercicio de Clasificacion</a></li>
+                        </ul>
+                    </li>
                     <li>Unidad 7: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/6_metricas.ipynb">Como saber si mi caja negra esta bien entrenada?</a></li>
                     <li>Unidad 6: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/7_ajuste_de_parametros.ipynb">Seleccionando los mejores parametros para mi caja negra</a></li>
                     <li>Analisis y limpieza de datos (preprocesamiento):
