--- a/cursos/espanol/programacion/programacion.html
+++ b/cursos/espanol/programacion/programacion.html
@@ -29,6 +29,7 @@
                             <ul class="collapse list-unstyled" id="homeSubmenu">
                                 <li><a href="#">Programacion</a></li>
                                 <li><a href="../datascience/datascience.html">Ciencia de Datos</a></li>
+                                <li><a href="../deeplearning/deeplearning.html">Ciencia de Datos</a></li>
                                 <!--li><a href="#">Analisis y prediccion de datos</a></li>
                                 <li><a href="#">Blockchain</a></li>
                                 <li><a href="#">Programacion Cuantica</a></li-->
