--- a/cursos/espanol/programacion/programacion.html
+++ b/cursos/espanol/programacion/programacion.html
@@ -29,7 +29,7 @@
                             <ul class="collapse list-unstyled" id="homeSubmenu">
                                 <li><a href="#">Programacion</a></li>
                                 <li><a href="../datascience/datascience.html">Ciencia de Datos</a></li>
-                                <li><a href="../deeplearning/deeplearning.html">Ciencia de Datos</a></li>
+                                <li><a href="../deeplearning/deeplearning.html">Deep Learning</a></li>
                                 <!--li><a href="#">Analisis y prediccion de datos</a></li>
                                 <li><a href="#">Blockchain</a></li>
                                 <li><a href="#">Programacion Cuantica</a></li-->
@@ -79,8 +79,17 @@
                     <li>Unidad 15: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/A5_clases.ipynb">Crear nuestro propio tipo de variable (Clases)</a></li>
                     <li>Unidad 16: 
                         <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/A6_numeros_aleatorios.ipynb">Numeros Aleatorios</a>
-                        <ul><li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/A6.1_probabilidades_contraintuitivas.ipynb">Simulacion y Probabilidades Contraintuitivas</a></li></ul>
+                        <ul><li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/A6.1_probabilidades_contraintuitivas.ipynb">Simulacion y Probabilidades Contraintuitivas (ejercicio avanzado opcional)</a></li></ul>
                     </li>
+                    <!--li>Material Avanzado Opcional:
+                        <ul>
+                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/E1_notacion_big_o.ipynb">Notacion Big O</a></li>
+                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/E2_vectorizacion.ipynb">Vectorizacion</a></li>
+                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/E3_fstrings.ipynb">f Strings</a></li>
+                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/E4_list_comprehension.ipynb">List Comprehension</a></li>
+                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/E5_fecha_y_hora.ipynb">Fecha y Hora</a></li>
+                        </ul>
+                    </li-->
                 </ul>
 
                 
