Added programacion advanced material

--- a/cursos/espanol/programacion/programacion.html
+++ b/cursos/espanol/programacion/programacion.html
@@ -81,15 +81,15 @@
                         <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/A6_numeros_aleatorios.ipynb">Numeros Aleatorios</a>
                         <ul><li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/A6.1_probabilidades_contraintuitivas.ipynb">Simulacion y Probabilidades Contraintuitivas (ejercicio avanzado opcional)</a></li></ul>
                     </li>
-                    <!--li>Material Avanzado Opcional:
+                    <li>Material Avanzado Opcional:
                         <ul>
                             <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/E1_notacion_big_o.ipynb">Notacion Big O</a></li>
-                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/E2_vectorizacion.ipynb">Vectorizacion</a></li>
+                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/E2_fecha_y_hora.ipynb">Fecha y Hora</a></li>
                             <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/E3_fstrings.ipynb">f Strings</a></li>
                             <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/E4_list_comprehension.ipynb">List Comprehension</a></li>
-                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/E5_fecha_y_hora.ipynb">Fecha y Hora</a></li>
+                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/E5_id_y_scope.ipynb">Copia de variables y referencias</a></li>
                         </ul>
-                    </li-->
+                    </li>
                 </ul>
 
                 
