Added intro deeplearning

--- a/cursos/espanol/deeplearning/deeplearning.html
+++ b/cursos/espanol/deeplearning/deeplearning.html
@@ -50,7 +50,7 @@
                     las herramientas del deep learning en sus respectivas actividades.</p>
                 <h2>Contenido:</h2>
                 <ul>
-                    <li>Unidad 0: <a href="#">De imagenes y texto a vectores</a></li>
+                    <li>Unidad 0: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/0_intro.ipynb">De imagenes y texto a vectores</a></li>
                     <li>Unidad 1: <a href="#">Cajas negras preentrenadas y fine tuning</a></li>
                     <li>Unidad 2: LLM APIs
                         <ul>
