--- a/clases_presenciales.html
+++ b/clases_presenciales.html
@@ -20,9 +20,9 @@
                     </button>
                 </div>
                 <div class="p-4 pt-5">
-                    <h1 ><a href="#">Free<br/>Coding<br/>Tour</a><br/><br/></h1>
+                    <h1 ><a href="./index.html">Free<br/>Coding<br/>Tour</a><br/><br/></h1>
                     <ul class="list-unstyled components mb-5">
-                        <li class="active">
+                        <li>
                             <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Coding Tours</a>
                             <ul class="show list-unstyled" id="homeSubmenu">
                                 <li><a href="./cursos/espanol/programacion/programacion.html">Programacion</a></li>
@@ -34,7 +34,7 @@
                             </ul>
                         </li>
                         <li><a href="contact.html">Dudas y Sugerencias</a></li>
-                        <li><a href="clases_presenciales.html">Clases Presenciales</a></li>
+                        <li class="active"><a href="clases_presenciales.html">Clases Presenciales</a></li>
                         <li><a href="aboutus.html">Sobre FCT</a></li>
                         <!--li><a href="meetdates.html">Fechas de meet</a></li-->
                         <!--li><a href="#">Cursos Presenciales</a></li-->
@@ -48,57 +48,16 @@
             </nav>
 
             <div id="content" class="p-4 p-md-5 pt-5">
-                <h1 class="mb-4">Free Coding Tour</h1>
-                <p>Aqui encontraras cursos de programacion faciles y gratuitos 
-                    para aprender desde cero sin conocimientos previos 
-                    y sin instalar ningun software ni necesitar una computadora especial:</p>
+                <h1 class="mb-4">Clases Presenciales</h1>
+                <p>Actualmente me encuentro dando clases en los siguientes institutos educativos:</p>
 
                 <p>
                     <ul>
-                        <li>Totalmente gratuitos.</li>
-                        <li>Interactivos y sin necesidad de instalar software especial.</li>
-                        <li>Accesible para personas que no tienen conocimientos previos de computacion ni matematicas.</li>
+                        <li><a target="_blank" href="https://immune.institute/">IMMUNE</a></li>
+                        <li><a target="_blank" href="https://campusvirtual.iddigitalschool.com/">ID Bootcamps</a></li>
                     </ul>
                 </p>
                 
-                <h2 class="mb-4">Cursos disponibles:</h2>
-                <ul>
-                    <li>
-                        <h3><a href="./cursos/espanol/programacion/programacion.html">Programacion (ir al curso)</a></h3>
-                        <p>
-                        Curso rapido de programacion en python. Desde cero.
-                        </p>
-                    </li>
-                    <li>
-                        <h3><a href="./cursos/espanol/datascience/datascience.html">Ciencia de Datos (ir al curso)</a></h3>
-                        <p>
-                            Curso para que personas de diferentes ambitos y formaciones puedan utilizar
-                            las herramientas de la ciencia de datos en sus respectivas actividades.
-                        </p>
-                    </li>
-                    <li>
-                        <h3><a href="./cursos/espanol/deeplearning/deeplearning.html">Deep Learning (ir al curso)</a></h3>
-                        <p>
-                            Curso para que personas de diferentes ambitos y formaciones puedan utilizar
-                            las herramientas de deep learning en sus respectivas actividades.
-                        </p>
-                    </li>
-                </ul>
-
-                <!--h3><a href="./cursos/espanol/datascience.html">Data Science</a></h3>
-                <p>
-                Curso rapido para aprender lo elemental de la ciencia de datos.
-                </p>
-
-                <h3><a href="./cursos/espanol/blockchain.html">Blockchain</a></h3>
-                <p>
-                Curso rapido para aprender los conceptos fundamentales de Blockchain
-                </p>
-
-                <h3><a href="./cursos/espanol/programacioncuantica.html">Programacion Cuantica</a></h3>
-                <p>
-                Curso rapido para aprender a manipular qbits.
-                </p-->
             </div>
         </div>
         <script src="assets/js/jquery.min.js"></script>
