--- a/cursos/espanol/programacion/programacion.html
+++ b/cursos/espanol/programacion/programacion.html
@@ -36,6 +36,7 @@
                             </ul>
                         </li>
                         <li><a href="../../../contact.html">Dudas y Sugerencias</a></li>
+                        <li><a href="../../../clases_presenciales.html">Clases Presenciales</a></li>
                         <li><a href="../../../aboutus.html">Sobre FCT</a></li>
                         <!--li><a href="../../../meetdates.html">Fechas de meet</a></li-->
                     </ul>
