--- a/aboutus.html
+++ b/aboutus.html
@@ -27,12 +27,14 @@
                             <ul class="show list-unstyled" id="homeSubmenu">
                                 <li><a href="./cursos/espanol/programacion/programacion.html">Programacion</a></li>
                                 <li><a href="./cursos/espanol/datascience/datascience.html">Ciencia de Datos</a></li>
+                                <li><a href="./cursos/espanol/deeplearning/deeplearning.html">Deep Learning</a></li>
                                 <!--li><a href="#">Data Science</a></li>
                                 <li><a href="#">Blockchain</a></li>
                                 <li><a href="#">Programacion Cuantica</a></li-->
                             </ul>
                         </li>
                         <li><a href="contact.html">Dudas y Sugerencias</a></li>
+                        <li><a href="clases_presenciales.html">Clases Presenciales</a></li>
                         <li><a href="aboutus.html">Sobre FCT</a></li>
                         <!--li><a href="#">Cursos Presenciales</a></li-->
                     </ul>
@@ -69,7 +71,9 @@
                 </p>
                 <p>
                     Estos cursos no son un reemplazo de otros cursos y mucho menos del acompañamiento 
-                    presencial de profesores.
+                    presencial de profesores. 
+                    Puedes conocer <li><a href="clases_presenciales.html">aqui</a></li> 
+                    donde estoy dando clases presenciales en este momento.
                 </p>
                 <p>
                     
