Updated deeplearning units

--- a/cursos/espanol/deeplearning/deeplearning.html
+++ b/cursos/espanol/deeplearning/deeplearning.html
@@ -51,7 +51,8 @@
                     las herramientas del deep learning en sus respectivas actividades.</p>
                 <h2>Contenido:</h2>
                 <ul>
-                    <li>Unidad 0: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/0_intro.ipynb">De imagenes y texto a vectores</a></li>
+                    <li>Unidad 0: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/0_intro.ipynb">De imagenes a vectores</a></li>
+                    <li>Unidad 0: <a href="#">De texto a vectores</a></li>
                     <li>Unidad 1: <a href="#">Cajas negras preentrenadas y fine tuning</a></li>
                     <li>Unidad 2: LLM APIs
                         <ul>
@@ -60,12 +61,13 @@
                         </ul>
                     </li>
                     <li>
-                        Espiando dentro de las cajas negras de deep learning:
+                        Espiando dentro de las cajas negras de deep learning (material opcional avanzado):
                         <ul>
                             <li><a href="#">De redes neuronales a matrices y grafos</a></li>
+                            <li><a href="#">Redes Profundas</a></li>
                             <li>Arquitecturas:
                                 <ul>
-                                    
+                                    <li><a href="#">Encoders</a></li>
                                     <li><a href="#">Redes Convolucionales</a></li>
                                     <li><a href="#">Transformers</a></li>
                                 </ul>
