--- a/aboutus.html
+++ b/aboutus.html
@@ -72,7 +72,7 @@
                 <p>
                     Estos cursos no son un reemplazo de otros cursos y mucho menos del acompañamiento 
                     presencial de profesores. 
-                    Puedes conocer <li><a href="clases_presenciales.html">aqui</a></li> 
+                    Puedes conocer <a href="clases_presenciales.html">aqui</a> 
                     donde estoy dando clases presenciales en este momento.
                 </p>
                 <p>
