Updated deeplearning course

--- a/cursos/espanol/deeplearning/deeplearning.html
+++ b/cursos/espanol/deeplearning/deeplearning.html
@@ -51,10 +51,10 @@
                     las herramientas del deep learning en sus respectivas actividades.</p>
                 <h2>Contenido:</h2>
                 <ul>
-                    <li>Unidad 0: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/0_intro.ipynb">De imagenes a vectores</a></li>
-                    <li>Unidad 0.1: <a href="#">De texto a vectores</a></li>
-                    <li>Unidad 1: <a href="#">Cajas negras preentrenadas y fine tuning</a></li>
-                    <li>Unidad 2: LLM APIs
+                    <li>Unidad 1: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/1_imagenes_a_vectores.ipynb">De imagenes a vectores</a></li>
+                    <li>Unidad 2: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/2_texto_a_vectores.ipynb">De texto a vectores</a></li>
+                    <li>Unidad 3: <a href="#">Cajas negras preentrenadas y fine tuning</a></li>
+                    <li>Unidad 4: LLM APIs
                         <ul>
                             <li><a href="#">Base de datos Vectoriales</a></li>
                             <li><a href="#">OpenAI</a></li>
@@ -64,6 +64,7 @@
                     <li>
                         Espiando dentro de las cajas negras de deep learning (material opcional avanzado):
                         <ul>
+                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/E0_redes_neuronales.ipynb">Intro a redes neuronales</a></li>
                             <li><a href="#">De redes neuronales a matrices y grafos</a></li>
                             <li><a href="#">Redes Profundas</a></li>
                             <li>Arquitecturas:
