--- a/cursos/espanol/deeplearning/deeplearning.html
+++ b/cursos/espanol/deeplearning/deeplearning.html
@@ -53,8 +53,9 @@
                 <ul>
                     <li>Unidad 1: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/1_imagenes_a_vectores.ipynb">De imagenes a vectores</a></li>
                     <li>Unidad 2: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/2_texto_a_vectores.ipynb">De texto a vectores</a></li>
-                    <li>Unidad 3: <a href="#">Cajas negras preentrenadas y fine tuning</a></li>
-                    <li>Unidad 4: LLM APIs
+                    <li>Unidad 3: <a href="#">Cajas negras preentrenadas</a></li>
+                    <li>Unidad 3: <a href="#">Fine tuning</a></li>
+                    <!--li>Unidad 4: LLM APIs
                         <ul>
                             <li><a href="#">Base de datos Vectoriales</a></li>
                             <li><a href="#">OpenAI</a></li>
@@ -76,7 +77,7 @@
                             </li>
                             <li><a href="#">El viejo y conocido KNN</a></li>
                         </ul>
-                    </li>
+                    </li-->
                     
 
                     
